# rousquille-tools

./: .gitignore  README.md  pyproject.toml
rousquille_tools/: decorators.py  shell.py
tests/: test_decorators.py  test_shell.py
