[tool.poetry]
name = "rousquille-tools"
version = "0.1.0"
description = "My personal toolbox"
authors = ["Fabien ROSSA"]
readme = "README.md"
packages = [{include = "rousquille_tools"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
