[tool.poetry]
name = "rousquille-tools"
version = "0.1.2"
description = "My personal toolbox"
authors = ["Fabien ROSSA"]
readme = "README.md"
packages = [{include = "rousquille_tools"}]
repository = "https://github.com/rousquille/rousquille-tools"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
